2010-09-20  Per Bothner  <per@bothner.com>

	* ClassType.java (AbstractMethodFilter): New static member class.
	(getAbstractMethods): New method.

2010-09-17  Per Bothner  <per@bothner.com>

	* PrimType.java (boxedType): New method.
	(emitCoerceToObject): Use boxedType.

	* PrimType (compare): Return -3 if not shown to be compatible.

2010-08-28  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitInvokeMethod): After initialization we also need
	to remove UninitializedType from the local_types array.

	* Label.java (mergeTypes): New method.  It differs from
	Type.lowestCommonSuperType in that merging a PrimType and a
	non-PrimType returns null rather than objectType.

2010-08-07  Per Bothner  <per@bothner.com>

	* Type.java (class ClassToTypeMap): Change to a member class.
	Remove default constructor.
	(ClassToTypeMap.matches): Fix - parameter should be key type,
	not value type.

2010-08-01  Per Bothner  <per@bothner.com>

	* ClassType.java: Add 'synchronized' a bunch of places.  This is needed
	when reading "existing" classes, because we share a global
	mapNameToType and hence the set of existing classes is shared.
	* Field.java: Likewise.

	* ClassType.java (make(String,ClassType)): Deprecate.

2010-07-19  Per Bothner  <per@bothner.com>

	* CpoolFloat.java: Remove no-longer-used class.
	Replaced by CpoolValue1.java - in 1997!

2010-04-10  Per Bothner  <per@bothner.com>

	* AnnotationEntry.java: New class - a placeholder for future
	annotation support.

2010-04-02  Per Bothner  <per@bothner.com>

	* PrimType.java (coerceFromObject): Add support for boolean.

2010-01-10  Per Bothner  <per@bothner.com>

	* RuntimeAnnotationsAttr.java (printAnnotationElementValue):
	Print a class annotation value.

	Support reading/printing (but not yet generating) annotations.
	* RuntimeAnnotationsAttr.java: New class, extends MiscAttr, for
	"RuntimeVisibleAnnotations" or "RuntimeInvisibleAnnotations".

	* Makefile.am: Update accordingly.